fix affix overflow-x, margin-right

--- a/resources/less/gui.less
+++ b/resources/less/gui.less
@@ -497,9 +497,14 @@ div.toc-side {
 
 div.toc-side.affix {
      top:50px;     
-     overflow-y: auto;
-     height: 90%;
+     overflow-y:auto;
+     height:90%;
+     margin-right:20px;
     }
+     
+.affix-bottom {
+    position:relative;
+}
 
 div.toc {
     h3 {
